src/test/ui/error-codes/E0061.stderr
error[E0061]: this function takes 2 parameters but 1 parameter was supplied
  --> $DIR/E0061.rs:6:5
   |
LL | fn f(a: u16, b: &str) {}
   | --------------------- defined here
...
LL |     f(0);
   |     ^^^^ expected 2 parameters

error[E0061]: this function takes 1 parameter but 0 parameters were supplied
  --> $DIR/E0061.rs:10:5
   |
LL | fn f2(a: u16) {}
   | ------------- defined here
...
LL |     f2();
   |     ^^^^ expected 1 parameter

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0061`.
